<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut_telegram"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_telegram"
        android:shortcutShortLabel="@string/shortcut_telegram_short"
        android:shortcutLongLabel="@string/shortcut_telegram_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://t.me/cq_releases" />
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_github"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_github"
        android:shortcutShortLabel="@string/shortcut_github_short"
        android:shortcutLongLabel="@string/shortcut_github_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/tanvirr007/study-releases" />
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_check_updates"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_update"
        android:shortcutShortLabel="@string/shortcut_update_short"
        android:shortcutLongLabel="@string/shortcut_update_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="study.tanvir.info"
            android:targetClass="study.tanvir.info.MainActivity"
            android:data="cq://check-updates" />
    </shortcut>
</shortcuts>
